--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
   "name": "jsondom",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=6.5",
+    "npm": ">=5.0"
+  },
   "repository": "https://github.com/tgdn/jsondom.git",
   "author": "Thomas Gak Deluen <tgdn45@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@blueprintjs/core": "^1.31.0",
+    "babel-plugin-module-resolver": "^2.7.1",
     "brace": "^0.10.0",
+    "css-loader": "^0.28.7",
+    "express": "^4.16.2",
     "next": "^4.0.3",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-ace": "^5.4.0",
-    "react-dom": "^16.0.0"
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-dom": "^16.0.0",
+    "react-styled-flexboxgrid": "^2.1.0",
+    "style-loader": "^0.19.0",
+    "styled-components": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.9.0"
   }
 }
