--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": "next/babel",
   "plugins": [
+    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ],
     [
       "module-resolver",
       {
