--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@blueprintjs/core": "^1.31.0",
     "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-styled-components": "^1.2.1",
     "brace": "^0.10.0",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
@@ -27,6 +28,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.0.0",
     "react-styled-flexboxgrid": "^2.1.0",
+    "semantic-ui-react": "^0.75.0",
     "style-loader": "^0.19.0",
     "styled-components": "^2.2.1",
     "webpack-bundle-analyzer": "^2.9.0"
