--- a/package.json
+++ b/package.json
@@ -19,15 +19,21 @@
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-styled-components": "^1.2.1",
     "brace": "^0.10.0",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "next": "^4.0.3",
+    "next-redux-wrapper": "^1.3.4",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-ace": "^5.4.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-styled-flexboxgrid": "^2.1.0",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.75.0",
     "style-loader": "^0.19.0",
     "styled-components": "^2.2.1",
