--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "immutable": "^3.8.2",
+    "less": "^2.7.3",
+    "lodash": "^4.17.4",
     "next": "^4.0.3",
     "next-redux-wrapper": "^1.3.4",
     "prop-types": "^15.6.0",
@@ -29,6 +32,7 @@
     "react-ace": "^5.4.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.0.0",
+    "react-mosaic-component": "^1.0.2",
     "react-redux": "^5.0.6",
     "react-styled-flexboxgrid": "^2.1.0",
     "redux": "^3.7.2",
