--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-styled-flexboxgrid": "^2.1.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.75.0",
     "style-loader": "^0.19.0",
