--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
   "author": "Thomas Gak Deluen <tgdn45@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "node server.js",
-    "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "run": "./node_modules/electron/dist/Electron.app/Contents/MacOS/Electron .",
+    "dev": "concurrently \"tsc --pretty --watch\" \"next ./build\"",
+    "clean": "rm -rf ./build",
+    "prebuild": "tsc",
+    "build": "next build ./build",
+    "start": "NODE_ENV=production next start ./build"
   },
   "dependencies": {
     "@blueprintjs/core": "^1.31.0",
+    "@types/node": "^8.0.53",
+    "@types/react": "^16.0.25",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-styled-components": "^1.2.1",
     "brace": "^0.10.0",
     "classnames": "^2.2.5",
+    "concurrently": "^3.5.0",
     "css-loader": "^0.28.7",
+    "electron": "^1.7.9",
+    "electron-is-dev": "^0.3.0",
+    "electron-next": "^3.1.3",
     "express": "^4.16.2",
     "immutable": "^3.8.2",
     "less": "^2.7.3",
@@ -42,6 +51,14 @@
     "semantic-ui-react": "^0.75.0",
     "style-loader": "^0.19.0",
     "styled-components": "^2.2.1",
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.1",
     "webpack-bundle-analyzer": "^2.9.0"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.85",
+    "@types/next": "^2.4.6",
+    "@types/react-redux": "^5.0.13",
+    "tslint-config-prettier": "^1.6.0"
   }
 }
